# projet-eau-david

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  DOCUMENTATION_PROJET.md  GUIDE_CONCEPTS_PROJET.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  api_server.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
config/: databricks_job_config.json
data/bronze/: bronze_combined_sample.csv
data/clean/: silver_clean_sample.csv
data/gold/: gold_communes_top10_best.csv  gold_communes_top10_worst.csv  gold_critical_parameters.csv  gold_departments_pollution.csv  gold_global_kpis.csv
data/sample/: sample_eau.csv
docs/: MIGRATION_URL_2025.md  architecture_medaillon.md  guide_installation.md  regles_qualite.md
exports/: api_exposition.json
notebooks/: 01_ingestion_bronze.py  02_transformation_silver.py  03_aggregation_gold.py  README.md
notebooks/databricks_pipeline/: 01_ingestion_bronze.py  02_transformation_silver.py  notebook_databricks_kpi.ipynb
notebooks/local_pipeline/: notebook_databricks_eau.ipynb
scripts/: README.md  __init__.py  analyze_zip.py  check_columns.py  check_gold_output.py  check_silver.py  quick_check.py  quick_check_silver.py  trigger_pipeline.py
src/eau/: __init__.py  bronze.py  gold.py  silver.py
tests/: __init__.py  test_columns.py  test_setup.py  test_smoke.py
